--- a/about.html
+++ b/about.html
@@ -11,10 +11,35 @@
 
   <body>
 
-    <h1>Hello, World!</h1>
-    <p>Write your own code!</p>
+    <!-- Nav -->
+    <img src="img/olive_logo.png">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+   <!-- Nav End -->
 
+    <h2>About Me</h2>
 
+    <div>
+      
+      <div>
+
+        <p>Hello, I'm glad you stopped by! I'm Andrew, a Graphic Designer from Dover, PA. I'm currently pursuing a BFA from York College of Pennsylvania. I'm also planning on completing minors in Spanish and Art History. This is my portfolio. Take a look around!</p>
+
+      </div>
+
+      <div>
+
+       <img src="img/andrew.png">
+
+      </div>
+
+    </div>
 
 	<script src="js/index.js"></script> 
   </body>
