--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
   </head>
 
   <body>
+  
+    <!-- Nav -->
+   <img src="img/tan_logo.png">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+    <!-- Nav End -->
 
-    <h1>Hello, World!</h1>
-    <p>Write your own code!</p>
+    <div>
 
+      <h1>Welcome!</h1>
+      
+      <h2>My name's Andrew</h2>
+
+    </div>
 
 
 	<script src="js/index.js"></script> 
