--- a/porfolio_four.html
+++ b/porfolio_four.html
@@ -11,10 +11,31 @@
 
   <body>
 
-    <h1>Hello, World!</h1>
-    <p>Write your own code!</p>
+    <!-- Nav -->
+    <img src="img/olive_logo.png">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+   <!-- Nav End -->
 
+   <h2>Multimedia Fine Art</h2>
 
+    <img src="img/spray_paint.png">
+
+    <h4>Untitled</h4>
+    <h5>2023, Spray Paint/Charcoal</h5>
+    <img src="img/info_button.png">
+
+    <img src="img/maritime.png">
+    
+    <h4>Maritime</h4>
+    <h5>2023, Spray Paint/Acrylic Paint</h5>
+    <img src="img/info_button.png">
 
 	<script src="js/index.js"></script> 
   </body>
