--- a/porfolio_two.html
+++ b/porfolio_two.html
@@ -11,10 +11,32 @@
 
   <body>
 
-    <h1>Hello, World!</h1>
-    <p>Write your own code!</p>
+    <!-- Nav -->
+    <img src="img/olive_logo.png">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+   <!-- Nav End -->
 
+    <h2>Multimedia Design</h2>
 
+    <img src="img/snapshot_one.png">
+    <img src="img/snapshot_two.png">
+
+    <h4>Snapshot Postcard</h4>
+    <h5>2023, Digital/Photography</h5>
+    <img src="img/info_button.png">
+
+    <img src="img/childhood.png">
+    
+    <h4>Childhood</h4>
+    <h5>2023, Digital/Photography/Markers</h5>
+    <img src="img/info_button.png">
 
 	<script src="js/index.js"></script> 
   </body>
