--- a/portfolio_one.html
+++ b/portfolio_one.html
@@ -11,10 +11,43 @@
 
   <body>
 
-    <h1>Hello, World!</h1>
-    <p>Write your own code!</p>
+    <!-- Nav -->
+    <img src="img/olive_logo.png">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+   <!-- Nav End -->
 
+    <h2>Digital Design</h2>
 
+    <div>
+
+      <div>
+
+        <img src="img/gig_poster.png">
+
+        <h4>Gig Poster</h4>
+        <h5>2022, Digital</h5>
+        <img src="img/info_button.png">
+
+      </div>
+
+      <div>
+
+        <img src="img/game_over.png">
+        
+        <h4>Game Over</h4>
+        <h5>2023, Digital</h5>
+        <img src="img/info_button.png">
+
+      </div>
+
+    </div>
 
 	<script src="js/index.js"></script> 
   </body>
