--- a/portfolio_three.html
+++ b/portfolio_three.html
@@ -11,9 +11,37 @@
 
   <body>
 
-    <h1>Hello, World!</h1>
-    <p>Write your own code!</p>
+    <!-- Nav -->
+    <img src="img/olive_logo.png">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+   <!-- Nav End -->
 
+   <h2>Graphite Fine Art</h2>
+
+   <img src="img/soldiers.png">
+
+   <h4>Soldiers</h4>
+   <h5>2023, Graphite</h5>
+   <img src="img/info_button.png">
+
+   <img src="img/favorite_things.png">
+   
+   <h4>A Few of My Favorite Things</h4>
+   <h5>2022, Graphite</h5>
+   <img src="img/info_button.png">
+
+   <img src="img/bunnies.png">
+   
+   <h4>Clyde and Merlin</h4>
+   <h5>2023, Graphite</h5>
+   <img src="img/info_button.png">
 
 
 	<script src="js/index.js"></script> 
