--- a/work.html
+++ b/work.html
@@ -11,10 +11,43 @@
 
   <body>
 
-    <h1>Hello, World!</h1>
-    <p>Write your own code!</p>
+    <!-- Nav -->
+    <img src="img/olive_logo.png">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+   <!-- Nav End -->
 
 
+    <h2>My Portfolio</h2>
+
+    <div>
+
+      <div>
+
+        <p>Welcome to the portfolio gallery! Here, you can see an overview of some of the work I've created over the last two years. The works are broken down into five major categories.</p>
+
+      </div>
+
+
+      <div>
+
+        <h3>Index</h3>
+        <ul>
+          <li>Digital Design</li>
+          <li>Multimedia Design</li>
+          <li>Graphite Fine Art</li>
+          <li>Multimedia Fine Art</li>
+        </ul>
+        
+      </div>
+
+    </div>
 
 	<script src="js/index.js"></script> 
   </body>
