--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
     <!-- Nav -->
     <img src="img/olive_logo.png">
-    <nav>
+    <nav class="navstyles">
       <ul>
         <li>Home</li>
         <li>About</li>
@@ -23,7 +23,10 @@
     </nav>
    <!-- Nav End -->
 
+
     <h2>About Me</h2>
+
+    <!-- Body -->
 
     <div>
       
@@ -40,6 +43,8 @@
       </div>
 
     </div>
+
+    <!-- Body End -->
 
 	<script src="js/index.js"></script> 
   </body>
