--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
+  <body id="homebody">
   
     <!-- Nav -->
    <img src="img/tan_logo.png">
-    <nav>
+    <nav class="navstyles">
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <!-- Nav End -->
+
+    <!-- Body -->
 
     <div>
 
@@ -31,6 +33,7 @@
 
     </div>
 
+    <!-- Body End -->
 
 	<script src="js/index.js"></script> 
   </body>
