--- a/porfolio_four.html
+++ b/porfolio_four.html
@@ -15,27 +15,45 @@
     <img src="img/olive_logo.png">
     <nav>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
    <!-- Nav End -->
 
    <h2>Multimedia Fine Art</h2>
 
-    <img src="img/spray_paint.png">
+    <!-- Body -->
 
-    <h4>Untitled</h4>
-    <h5>2023, Spray Paint/Charcoal</h5>
-    <img src="img/info_button.png">
+  <div>
 
-    <img src="img/maritime.png">
-    
-    <h4>Maritime</h4>
-    <h5>2023, Spray Paint/Acrylic Paint</h5>
-    <img src="img/info_button.png">
+    <div>
+
+      <img src="img/spray_paint.png">
+
+      <h4>Untitled</h4>
+      <h5>2023, Spray Paint/Charcoal</h5>
+      <div><p>Made in Drawing II class using spray paint. Charcoal was then applied to created outlines.</p></div>
+      <img src="img/info_button.png">
+
+    </div>
+
+    <div>
+
+      <img src="img/maritime.png">
+      
+      <h4>Maritime</h4>
+      <h5>2023, Spray Paint/Acrylic Paint</h5>
+      <div><p>Created in Drawing II class to display the principle of Notan. Initial drawing was done using spray paint. Acrylic paint was added for finer details, </p></div>
+      <img src="img/info_button.png">
+
+    </div>
+
+  </div>
+
+  <!-- Body End -->
 
 	<script src="js/index.js"></script> 
   </body>
