--- a/porfolio_two.html
+++ b/porfolio_two.html
@@ -15,28 +15,46 @@
     <img src="img/olive_logo.png">
     <nav>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
    <!-- Nav End -->
 
     <h2>Multimedia Design</h2>
 
-    <img src="img/snapshot_one.png">
-    <img src="img/snapshot_two.png">
+    <!-- Body -->
 
-    <h4>Snapshot Postcard</h4>
-    <h5>2023, Digital/Photography</h5>
-    <img src="img/info_button.png">
+  <div>
 
-    <img src="img/childhood.png">
-    
-    <h4>Childhood</h4>
-    <h5>2023, Digital/Photography/Markers</h5>
-    <img src="img/info_button.png">
+    <div>
+
+      <img src="img/snapshot_one.png">
+      <img src="img/snapshot_two.png">
+
+      <h4>Snapshot Postcard</h4>
+      <h5>2023, Digital/Photography</h5>
+      <div><p>Made in Print Production class. Combined elements of photography and digital creation on InDesign. Made use of Pantone colors and over-printing.</p></div>
+      <img src="img/info_button.png">
+
+    </div>
+
+    <div>
+
+      <img src="img/childhood.png">
+      
+      <h4>Childhood</h4>
+      <h5>2023, Digital/Photography/Markers</h5>
+      <div><p>Made in Print Production. Combined photograph of hand drawn elements with digital editing in InDesign,</p></div>
+      <img src="img/info_button.png">
+
+    </div>
+
+  </div>
+
+  <!-- Body End -->
 
 	<script src="js/index.js"></script> 
   </body>
