--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,8 @@
   <body>
 
     <!-- Nav -->
-    
     <img src="img/olive_logo.png">
-    <nav>
+    <nav class="navstyles">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -22,35 +21,31 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-
    <!-- Nav End -->
 
-    <h2>Digital Design</h2>
+   <!-- Body -->
 
-    <!-- Body -->
+    <h2>My Portfolio</h2>
 
     <div>
 
       <div>
 
-        <img src="img/gig_poster.png">
-
-        <h4>Gig Poster</h4>
-        <h5>2022, Digital</h5>
-        <div><p>Made in Elements of Computer Graphics class. Created using Photoshop and Illustrator. Vectorized found imagery used to create texture.</p></div>
-        <img src="img/info_button.png">
+        <p>Welcome to the portfolio gallery! Here, you can see an overview of some of the work I've created over the last two years. The works are broken down into five major categories.</p>
 
       </div>
 
+
       <div>
 
-        <img src="img/game_over.png">
+        <h3>Index</h3>
+        <ul>
+          <li>Digital Design</li>
+          <li>Multimedia Design</li>
+          <li>Graphite Fine Art</li>
+          <li>Multimedia Fine Art</li>
+        </ul>
         
-        <h4>Game Over</h4>
-        <h5>2023, Digital</h5>
-        <div><p>Made in Typography I class using typeface made by another student. Only elements used in poster are characters in typeface. Created in Illustrator.</p></div>
-        <img src="img/info_button.png">
-
       </div>
 
     </div>
