--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body id="homebody">
   
     <!-- Nav -->
-   <img src="img/tan_logo.png">
+
+  <header>
+   <img src="img/olive_logo.png">
     <nav class="navstyles">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,7 +23,19 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+  </header>
+
     <!-- Nav End -->
+
+    <!-- Header -->
+
+    <div>
+
+    <img src="img/tan_logo.png">
+
+    </div>
+
+    <!-- End Header -->
 
     <!-- Body -->
 
