--- a/porfolio_four.html
+++ b/porfolio_four.html
@@ -12,8 +12,10 @@
   <body>
 
     <!-- Nav -->
-    <img src="img/olive_logo.png">
-    <nav>
+
+  <header>
+   <img src="img/olive_logo.png">
+    <nav class="navstyles">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -21,9 +23,20 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+  </header>
+
    <!-- Nav End -->
 
-   <h2>Multimedia Fine Art</h2>
+   <!-- Header -->
+
+   <div>
+
+    <img src="img/olive_logo.png">
+    <h2>Multimedia Fine Art</h2>
+
+   </div>
+
+   <!-- End Header -->
 
     <!-- Body -->
 
@@ -31,7 +44,7 @@
 
     <div>
 
-      <img src="img/spray_paint.png">
+      <img src="img/spray_paint.jpg">
 
       <h4>Untitled</h4>
       <h5>2023, Spray Paint/Charcoal</h5>
@@ -42,7 +55,7 @@
 
     <div>
 
-      <img src="img/maritime.png">
+      <img src="img/maritime.jpeg">
       
       <h4>Maritime</h4>
       <h5>2023, Spray Paint/Acrylic Paint</h5>
