--- a/portfolio.html
+++ b/portfolio.html
@@ -12,20 +12,31 @@
   <body>
 
     <!-- Nav -->
-    <img src="img/olive_logo.png">
-    <nav class="navstyles">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <header>
+      <img src="img/olive_logo.png">
+       <nav class="navstyles">
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="contact.html">Contact</a></li>
+         </ul>
+       </nav>
+     </header>
    <!-- Nav End -->
 
-   <!-- Body -->
+   <!-- Header -->
 
+   <div>
+
+    <img src="img/olive_logo.png">
     <h2>My Portfolio</h2>
+
+   </div>
+
+   <!-- End Header -->
+
+   <!-- Body -->
 
     <div>
 
