--- a/portfolio_one.html
+++ b/portfolio_one.html
@@ -13,19 +13,30 @@
 
     <!-- Nav -->
     
-    <img src="img/olive_logo.png">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <header>
+      <img src="img/olive_logo.png">
+       <nav class="navstyles">
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="contact.html">Contact</a></li>
+         </ul>
+       </nav>
+     </header>
 
    <!-- Nav End -->
 
+   <!-- Header -->
+
+   <div>
+
+    <img src="img/olive_logo.png">
     <h2>Digital Design</h2>
+
+   </div>
+
+   <!-- End Header -->
 
     <!-- Body -->
 
@@ -33,7 +44,7 @@
 
       <div>
 
-        <img src="img/gig_poster.png">
+        <img src="img/gig_poster.jpg">
 
         <h4>Gig Poster</h4>
         <h5>2022, Digital</h5>
