--- a/portfolio_three.html
+++ b/portfolio_three.html
@@ -12,18 +12,31 @@
   <body>
 
     <!-- Nav -->
-    <img src="img/olive_logo.png">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+
+    <header>
+      <img src="img/olive_logo.png">
+       <nav class="navstyles">
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="contact.html">Contact</a></li>
+         </ul>
+       </nav>
+     </header>
+
    <!-- Nav End -->
 
-   <h2>Graphite Fine Art</h2>
+   <!-- Header -->
+
+   <div>
+
+    <img src="img/olive_logo.png">
+    <h2>Graphite Fine Art</h2>
+
+   </div>
+
+   <!-- End Header -->
 
     <!-- Body -->
 
@@ -31,7 +44,7 @@
 
     <div>
 
-      <img src="img/soldiers.png">
+      <img src="img/soldiers.jpeg">
 
       <h4>Soldiers</h4>
       <h5>2023, Graphite</h5>
@@ -42,7 +55,7 @@
 
     <div>
 
-      <img src="img/favorite_things.png">
+      <img src="img/favorite_things.jpg">
       
       <h4>A Few of My Favorite Things</h4>
       <h5>2022, Graphite</h5>
@@ -53,7 +66,7 @@
 
     <div>
 
-      <img src="img/bunnies.png">
+      <img src="img/bunnies.jpeg">
       
       <h4>Clyde and Merlin</h4>
       <h5>2023, Graphite</h5>
