--- a/about.html
+++ b/about.html
@@ -12,19 +12,31 @@
   <body>
 
     <!-- Nav -->
-    <img src="img/olive_logo.png">
-    <nav class="navstyles">
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
+
+    <header>
+      <img src="img/olive_logo.png">
+       <nav class="navstyles">
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="contact.html">Contact</a></li>
+         </ul>
+       </nav>
+     </header>
+
    <!-- Nav End -->
 
+   <!-- Header -->
 
+   <div>
+
+    <img src="img/olive_logo.png">
     <h2>About Me</h2>
+
+  </div>
+
+   <!-- End Header -->
 
     <!-- Body -->
 
