--- a/contact.html
+++ b/contact.html
@@ -12,18 +12,31 @@
   <body id="contactbody">
 
   <!-- Nav -->
-  <img src="img/tan_logo.png">
-  <nav class="navstyles">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+
+  <header>
+    <img src="img/olive_logo.png">
+     <nav class="navstyles">
+       <ul>
+         <li><a href="index.html">Home</a></li>
+         <li><a href="about.html">About</a></li>
+         <li><a href="portfolio.html">Portfolio</a></li>
+         <li><a href="contact.html">Contact</a></li>
+       </ul>
+     </nav>
+   </header>
+
   <!-- Nav End -->
 
+  <!-- Header -->
+
+  <div>
+
+    <img src="img/tan_logo.png">
     <h2>Contact Me</h2>
+
+  </div>
+  
+  <!-- End Header -->
 
   <!-- Body -->
     
