--- a/porfolio_two.html
+++ b/porfolio_two.html
@@ -12,18 +12,31 @@
   <body>
 
     <!-- Nav -->
-    <img src="img/olive_logo.png">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+
+    <header>
+      <img src="img/olive_logo.png">
+       <nav class="navstyles">
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="contact.html">Contact</a></li>
+         </ul>
+       </nav>
+     </header>
+
    <!-- Nav End -->
 
+   <!-- Header -->
+
+   <div>
+
+    <img src="img/olive_logo.png">
     <h2>Multimedia Design</h2>
+
+   </div>
+
+   <!-- Header -->
 
     <!-- Body -->
 
@@ -43,7 +56,7 @@
 
     <div>
 
-      <img src="img/childhood.png">
+      <img src="img/childhood.jpg">
       
       <h4>Childhood</h4>
       <h5>2023, Digital/Photography/Markers</h5>
