--- a/work.html
+++ b/work.html
@@ -12,19 +12,31 @@
   <body>
 
     <!-- Nav -->
-    <img src="img/olive_logo.png">
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
+    <header>
+      <img src="img/olive_logo.png">
+       <nav class="navstyles">
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="about.html">About</a></li>
+           <li><a href="portfolio.html">Portfolio</a></li>
+           <li><a href="contact.html">Contact</a></li>
+         </ul>
+       </nav>
+     </header>
    <!-- Nav End -->
 
+   <!-- Header -->
 
+   <div>
+
+    <img src="img/olive_logo.png">
     <h2>My Portfolio</h2>
+
+   </div>
+  
+   <!-- End Header -->
+
+   <!-- Body -->
 
     <div>
 
@@ -48,6 +60,8 @@
       </div>
 
     </div>
+
+   <!-- End Header -->
 
 	<script src="js/index.js"></script> 
   </body>
