--- a/index.html
+++ b/index.html
@@ -12,26 +12,25 @@
   <body id="homebody">
   
     <!-- Nav -->
+<div id="mySidepanel" class="sidepanel">
+    <img src="img/olive_logo.png" id="nav_logo">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact</a>
+</div>
 
-  <header>
-   <img src="img/olive_logo.png">
-    <nav class="navstyles">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
     <!-- Nav End -->
 
     <!-- Header -->
 
-    <div>
+    <div class="sidemenu_cta">
 
-    <img src="img/tan_logo.png">
+      <button class="openbtn" onclick="openNav()"><img src="img/tan_logo.png" class="home_logo"></button>
+
+    
 
     </div>
 
