--- a/contact.html
+++ b/contact.html
@@ -13,17 +13,14 @@
 
   <!-- Nav -->
 
-  <header>
-    <img src="img/olive_logo.png">
-     <nav class="navstyles">
-       <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="about.html">About</a></li>
-         <li><a href="portfolio.html">Portfolio</a></li>
-         <li><a href="contact.html">Contact</a></li>
-       </ul>
-     </nav>
-   </header>
+  <div id="mySidepanel" class="sidepanel">
+    <img src="img/olive_logo.png" id="nav_logo">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact</a>
+  </div>
 
   <!-- Nav End -->
 
@@ -31,7 +28,12 @@
 
   <div>
 
-    <img src="img/tan_logo.png">
+    <div class="sidemenu_cta">
+
+      <button class="openbtn" onclick="openNav()"><img src="img/tan_logo.png" class="home_logo"></button>
+
+    </div>
+    
     <h2>Contact Me</h2>
 
   </div>
