--- a/portfolio_three.html
+++ b/portfolio_three.html
@@ -13,17 +13,14 @@
 
     <!-- Nav -->
 
-    <header>
-      <img src="img/olive_logo.png">
-       <nav class="navstyles">
-         <ul>
-           <li><a href="index.html">Home</a></li>
-           <li><a href="about.html">About</a></li>
-           <li><a href="portfolio.html">Portfolio</a></li>
-           <li><a href="contact.html">Contact</a></li>
-         </ul>
-       </nav>
-     </header>
+    <div id="mySidepanel" class="sidepanel_white">
+      <img src="img/olive_logo.png" id="nav_logo">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="contact.html">Contact</a>
+    </div>
 
    <!-- Nav End -->
 
@@ -31,8 +28,17 @@
 
    <div>
 
-    <img src="img/olive_logo.png">
+    <div class="sidemenu_cta">
+
+      <button class="openbtn_white" onclick="openNav()"><img src="img/olive_logo.png" class="home_logo"></button>
+
+    </div>
+
     <h2>Graphite Fine Art</h2>
+
+    <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001" stroke="#9B9D57" stroke-width="7"/>
+    </svg>
 
    </div>
 
