--- a/about.html
+++ b/about.html
@@ -22,48 +22,57 @@
       <a href="contact.html">Contact</a>
     </div>
 
-   <!-- Nav End -->
+    <!-- Nav End -->
 
-   <!-- Header -->
+    <!-- Header -->
 
-   <div>
+    <div>
 
-    <div class="sidemenu_cta">
+      <div class="sidemenu_cta">
 
-      <button class="openbtn_white" onclick="openNav()"><img src="img/olive_logo.png" class="home_logo"></button>
+        <button class="openbtn_white" onclick="openNav()"><img
+            src="img/olive_logo.png" class="home_logo"></button>
+
+      </div>
 
     </div>
 
-    <h2>About Me</h2>
-
-    <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001" stroke="#9B9D57" stroke-width="7"/>
-    </svg>
-
-  </div>
-
-   <!-- End Header -->
+    <!-- End Header -->
 
     <!-- Body -->
 
-    <div>
-      
+    <div class="pageheader">
+      <h2>About Me</h2>
+
+      <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
+          stroke="#9B9D57" stroke-width="7" />
+      </svg>
+    </div>
+
+    <section class="horizontallayout">
+
       <div class="bodytext">
 
-        <p>Hello, I'm glad you stopped by! I'm Andrew, a Graphic Designer from Dover, PA. I'm currently pursuing a BFA from York College of Pennsylvania. I'm also planning on completing minors in Spanish and Art History. This is my portfolio. Take a look around!</p>
+        <p>Hello, I'm glad you stopped by! I'm Andrew, a Graphic Designer from
+          Dover, PA. I'm currently pursuing a BFA from York College of
+          Pennsylvania. I'm also planning on completing minors in Spanish and
+          Art History. This is my portfolio. Take a look around!</p>
 
       </div>
 
       <div>
 
-       <img src="img/andrew.png">
+        <img src="img/andrew.png">
 
       </div>
 
-    </div>
+    </section>
 
     <!-- Body End -->
 
-	<script src="js/index.js"></script> 
+    <script src="js/index.js"></script>
   </body>
 </html>
