--- a/porfolio_four.html
+++ b/porfolio_four.html
@@ -22,58 +22,72 @@
       <a href="contact.html">Contact</a>
     </div>
 
-   <!-- Nav End -->
+    <!-- Nav End -->
 
-   <!-- Header -->
+    <!-- Header -->
 
-   <div>
+    <div>
 
-    <div class="sidemenu_cta">
+      <div class="sidemenu_cta">
 
-      <button class="openbtn_white" onclick="openNav()"><img src="img/olive_logo.png" class="home_logo"></button>
+        <button class="openbtn_white" onclick="openNav()"><img
+            src="img/olive_logo.png" class="home_logo"></button>
 
+      </div>
     </div>
-    
-    <h2>Multimedia Fine Art</h2>
 
-    <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001" stroke="#9B9D57" stroke-width="7"/>
-    </svg>
-
-   </div>
-
-   <!-- End Header -->
+    <!-- End Header -->
 
     <!-- Body -->
 
-  <div>
+    <div class="pageheader">
+      <h2>Multimedia Fine Art</h2>
 
-    <div>
-
-      <img src="img/spray_paint.jpg">
-
-      <h4>Untitled</h4>
-      <h5>2023, Spray Paint/Charcoal</h5>
-      <div><p>Made in Drawing II class using spray paint. Charcoal was then applied to created outlines.</p></div>
-      <img src="img/info_button.png">
-
+      <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
+          stroke="#9B9D57" stroke-width="7" />
+      </svg>
     </div>
 
-    <div>
+    <section class="horizontallayout">
 
-      <img src="img/maritime.jpeg">
-      
-      <h4>Maritime</h4>
-      <h5>2023, Spray Paint/Acrylic Paint</h5>
-      <div><p>Created in Drawing II class to display the principle of Notan. Initial drawing was done using spray paint. Acrylic paint was added for finer details, </p></div>
-      <img src="img/info_button.png">
+      <div>
 
-    </div>
+        <img src="img/spray_paint.jpg">
 
-  </div>
+        <h4>Untitled</h4>
+        <h5>2023, Spray Paint/Charcoal</h5>
+        <div><p>Made in Drawing II class using spray paint. Charcoal was then
+            applied to created outlines.</p></div>
+            <div class="tooltip">
+              <img src="img/info_button.png">
+              <span class="tooltiptext">Tooltip text</span>
+            </div>
 
-  <!-- Body End -->
+      </div>
 
-	<script src="js/index.js"></script> 
+      <div>
+
+        <img src="img/maritime.jpeg">
+
+        <h4>Maritime</h4>
+        <h5>2023, Spray Paint/Acrylic Paint</h5>
+        <div><p>Created in Drawing II class to display the principle of Notan.
+            Initial drawing was done using spray paint. Acrylic paint was added
+            for finer details, </p></div>
+            <div class="tooltip">
+              <img src="img/info_button.png">
+              <span class="tooltiptext">Tooltip text</span>
+            </div>
+
+      </div>
+
+    </section>
+
+    <!-- Body End -->
+
+    <script src="js/index.js"></script>
   </body>
 </html>
