--- a/porfolio_two.html
+++ b/porfolio_two.html
@@ -22,59 +22,74 @@
       <a href="contact.html">Contact</a>
     </div>
 
-   <!-- Nav End -->
+    <!-- Nav End -->
 
-   <!-- Header -->
+    <!-- Header -->
 
-   <div>
+    <div>
 
-    <div class="sidemenu_cta">
+      <div class="sidemenu_cta">
 
-      <button class="openbtn_white" onclick="openNav()"><img src="img/olive_logo.png" class="home_logo"></button>
+        <button class="openbtn_white" onclick="openNav()"><img
+            src="img/olive_logo.png" class="home_logo"></button>
+
+      </div>
 
     </div>
 
-    <h2>Multimedia Design</h2>
-
-    <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001" stroke="#9B9D57" stroke-width="7"/>
-    </svg>
-
-   </div>
-
-   <!-- Header -->
+    <!-- Header -->
 
     <!-- Body -->
 
-  <div>
+    <div class="pageheader">
+      <h2>Multimedia Design</h2>
 
-    <div>
-
-      <img src="img/snapshot_one.png">
-      <img src="img/snapshot_two.png">
-
-      <h4>Snapshot Postcard</h4>
-      <h5>2023, Digital/Photography</h5>
-      <div><p>Made in Print Production class. Combined elements of photography and digital creation on InDesign. Made use of Pantone colors and over-printing.</p></div>
-      <img src="img/info_button.png">
-
+      <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
+          stroke="#9B9D57" stroke-width="7" />
+      </svg>
     </div>
 
-    <div>
+    <section class="horizontallayout">
 
-      <img src="img/childhood.jpg">
-      
-      <h4>Childhood</h4>
-      <h5>2023, Digital/Photography/Markers</h5>
-      <div><p>Made in Print Production. Combined photograph of hand drawn elements with digital editing in InDesign,</p></div>
-      <img src="img/info_button.png">
+      <div>
 
-    </div>
+        <img src="img/snapshot_one.png">
+        <img src="img/snapshot_two.png">
 
-  </div>
+        <h4>Snapshot Postcard</h4>
+        <h5>2023, Digital/Photography</h5>
+        <div><p>Made in Print Production class. Combined elements of photography
+            and digital creation on InDesign. Made use of Pantone colors and
+            over-printing.</p></div>
+            <div class="tooltip">
+              <img src="img/info_button.png">
+              <span class="tooltiptext">Tooltip text</span>
+            </div>
 
-  <!-- Body End -->
+      </div>
 
-	<script src="js/index.js"></script> 
+      <div>
+
+        <img src="img/childhood.jpg">
+
+        <h4>Childhood</h4>
+        <h5>2023, Digital/Photography/Markers</h5>
+        <div><p>Made in Print Production. Combined photograph of hand drawn
+            elements with digital editing in InDesign,</p></div>
+            <div class="tooltip">
+              <img src="img/info_button.png">
+              <span class="tooltiptext">Tooltip text</span>
+            </div>
+
+      </div>
+
+    </section>
+
+    <!-- Body End -->
+
+    <script src="js/index.js"></script>
   </body>
 </html>
