--- a/portfolio.html
+++ b/portfolio.html
@@ -22,38 +22,43 @@
       <a href="contact.html">Contact</a>
     </div>
 
-   <!-- Nav End -->
+    <!-- Nav End -->
 
-   <!-- Header -->
+    <!-- Header -->
 
-   <div>
+    <div>
 
-    <div class="sidemenu_cta">
+      <div class="sidemenu_cta">
 
-      <button class="openbtn_white" onclick="openNav()"><img src="img/olive_logo.png" class="home_logo"></button>
+        <button class="openbtn_white" onclick="openNav()"><img
+            src="img/olive_logo.png" class="home_logo"></button>
+
+      </div>
+
+      <h2>My Portfolio</h2>
+
+      <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
+          stroke="#9B9D57" stroke-width="7" />
+      </svg>
 
     </div>
 
-    <h2>My Portfolio</h2>
+    <!-- End Header -->
 
-    <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001" stroke="#9B9D57" stroke-width="7"/>
-    </svg>
-
-   </div>
-
-   <!-- End Header -->
-
-   <!-- Body -->
+    <!-- Body -->
 
     <div>
 
       <div>
 
-        <p>Welcome to the portfolio gallery! Here, you can see an overview of some of the work I've created over the last two years. The works are broken down into five major categories.</p>
+        <p>Welcome to the portfolio gallery! Here, you can see an overview of
+          some of the work I've created over the last two years. The works are
+          broken down into five major categories.</p>
 
       </div>
-
 
       <div>
 
@@ -64,13 +69,13 @@
           <a href="portfolio_three.html">Graphite Fine Art</a>
           <a href="porfolio_four.html">Multimedia Fine Art</a>
         </div>
-        
+
       </div>
 
     </div>
 
     <!-- Body End -->
 
-	<script src="js/index.js"></script> 
+    <script src="js/index.js"></script>
   </body>
 </html>
