--- a/work.html
+++ b/work.html
@@ -14,38 +14,48 @@
     <!-- Nav -->
     <header>
       <img src="img/olive_logo.png">
-       <nav class="navstyles">
-         <ul>
-           <li><a href="index.html">Home</a></li>
-           <li><a href="about.html">About</a></li>
-           <li><a href="portfolio.html">Portfolio</a></li>
-           <li><a href="contact.html">Contact</a></li>
-         </ul>
-       </nav>
-     </header>
-   <!-- Nav End -->
+      <nav class="navstyles">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Nav End -->
 
-   <!-- Header -->
-
-   <div>
-
-    <img src="img/olive_logo.png">
-    <h2>My Portfolio</h2>
-
-   </div>
-  
-   <!-- End Header -->
-
-   <!-- Body -->
-
+    <!-- Header -->
     <div>
 
-      <div>
+      <img src="img/olive_logo.png">
+      <h2>My Portfolio</h2>
 
-        <p>Welcome to the portfolio gallery! Here, you can see an overview of some of the work I've created over the last two years. The works are broken down into five major categories.</p>
+    </div>
+
+    <!-- End Header -->
+
+    <!-- Body -->
+
+    <div class="pageheader">
+      <h2>My Portfolio</h2>
+
+      <svg width="1167" height="32" viewBox="0 0 1167 32" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M1 28.0001C186.574 0.608955 322.124 -3.97574 505 28.0001C763.134 -7.73631 907.865 0.385067 1166 28.0001"
+          stroke="#9B9D57" stroke-width="7" />
+      </svg>
+    </div>
+
+    <section class="horizontallayout">
+
+      <div>
+        <p>Welcome to the portfolio gallery! Here, you can see an overview of
+          some of the work I've created over the last two years. The works are
+          broken down into five major categories.</p>
 
       </div>
-
 
       <div>
 
@@ -56,13 +66,13 @@
           <li>Graphite Fine Art</li>
           <li>Multimedia Fine Art</li>
         </ul>
-        
+
       </div>
 
-    </div>
+    </section>
 
-   <!-- End Header -->
+    <!-- End Header -->
 
-	<script src="js/index.js"></script> 
+    <script src="js/index.js"></script>
   </body>
 </html>
