--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
   </head>
 
   <body id="homebody">
-  
+
     <!-- Nav -->
 
-<div id="mySidepanel" class="sidepanel">
-    <img src="img/olive_logo.png" id="nav_logo">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="contact.html">Contact</a>
-</div>
-
+    <div id="mySidepanel" class="sidepanel">
+      <img src="img/olive_logo.png" id="nav_logo">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="contact.html">Contact</a>
+    </div>
 
     <!-- Nav End -->
 
@@ -29,7 +28,8 @@
 
     <div class="sidemenu_cta">
 
-      <button class="openbtn" onclick="openNav()"><img src="img/tan_logo.png" class="home_logo"></button>
+      <button class="openbtn" onclick="openNav()"><img src="img/tan_logo.png"
+          class="home_logo"></button>
 
     </div>
 
@@ -37,25 +37,28 @@
 
     <!-- Body -->
 
-    
     <div class="hometext">
 
-      <svg width="932" height="7" viewBox="0 0 932 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <line x1="3.0598e-07" y1="3.5" x2="932" y2="3.50008" stroke="#EEDA92" stroke-width="7"/>
-        </svg>
+      <svg width="932" height="7" viewBox="0 0 932 7" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <line x1="3.0598e-07" y1="3.5" x2="932" y2="3.50008" stroke="#EEDA92"
+          stroke-width="7" />
+      </svg>
 
       <h1 class="welcome">Welcome!</h1>
-      
+
       <h2 class="subtitle">My name's Andrew</h2>
 
-      <svg width="932" height="7" viewBox="0 0 932 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <line x1="3.0598e-07" y1="3.5" x2="932" y2="3.50008" stroke="#EEDA92" stroke-width="7"/>
-        </svg>
+      <svg width="932" height="7" viewBox="0 0 932 7" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <line x1="3.0598e-07" y1="3.5" x2="932" y2="3.50008" stroke="#EEDA92"
+          stroke-width="7" />
+      </svg>
 
     </div>
 
     <!-- Body End -->
 
-	<script src="js/index.js"></script> 
+    <script src="js/index.js"></script>
   </body>
 </html>
